--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Login</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -63,9 +62,11 @@
         </div>
         <button type="submit" class="btn btn-primary btn-login">Entrar</button>
     </form>
+    <br />
+    <hr />
+    <a th:href="@{/oauth2/authorization/google}"  class="btn btn-primary btn-login">Entrar com Google</a>
 </div>
 
-<!-- Bootstrap JS (opcional, apenas se você precisar de funcionalidades JS do Bootstrap) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
